# img4690

./: .gitignore
setups/maskinsyn/: 00-install-opencv.sh  01-install-opencv-dependencies.sh  02-install-eigen.sh  03-install-sophus.sh  04-build-opencv.sh  README.txt
w0/lab_0_introduction-to-opencv/: CMakeLists.txt
w1/lab_1_1_eigen/: CMakeLists.txt  main.cpp
w1/lab_1_2_geometry/: CMakeLists.txt  attitude.cpp  cartesian_position.cpp  dataset.cpp  intrinsics.cpp  lab_1_2.cpp  local_coordinate_system.cpp  local_coordinate_system.h  perspective_camera_model.cpp
w1/lab_1_2_geometry_unfinished/: CMakeLists.txt  attitude.cpp  attitude.h  cartesian_position.cpp  cartesian_position.h  dataset.cpp  dataset.h  geodetic_position.h  intrinsics.cpp  intrinsics.h  lab_1_2.cpp  lab_1_2.h  local_coordinate_system.cpp  local_coordinate_system.h  perspective_camera_model.cpp  perspective_camera_model.h  viewer_3d.cpp  viewer_3d.h
w2/lab_2_blending/: lab_2.cpp  lab_2.h  laplace_blending.cpp  laplace_blending.h  linear_blending.cpp  linear_blending.h  main.cpp
w2/lab_2_blending_unfinished/: CMakeLists.txt  lab_2.cpp  laplace_blending.cpp  linear_blending.cpp
w3/lab_3_corners/: circle.h  circle_estimator.cpp  circle_estimator.h  corner_detector.cpp  filters.cpp  filters.h  lab_3.cpp  lab_3.h  main.cpp
w3/lab_3_corners_unfinished/: CMakeLists.txt  circle_estimator.cpp  filters.cpp  (+3 more)
w5/: cameraParameters.xml  cameraParameters_old.xml  cameraParameters_old2.xml
w5/lab_5_pose_unfinished/: CMakeLists.txt  ar_example.cpp  ar_example.h  calibSettings.xml  feature_utils.cpp  feature_utils.h  gtsam_pose_estimator.cpp  gtsam_pose_estimator.h  homography_pose_estimator.cpp  homography_pose_estimator.h  lab_5.cpp  lab_5.h  main.cpp  plane_world_model.h  pnp_pose_estimator.cpp  pnp_pose_estimator.h  pose_estimator.h  scene_3d.cpp  scene_3d.h
(+9 files in other folders)
